--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/favicon-32x32.png" />
+    <link rel="icon" type="image/svg+xml" href="/public/Logo192.png" />
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,7 +22,12 @@
 
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <button id="add-to-home-screen-button" style="display: none;">
+        Add to Home Screen
+      </button>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
+    
   </body>
 </html>
